# fastapi-etag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
fastapi_etag/: __init__.py  dependency.py  example.py  exampleclass.py  route.py  types.py
tests/: conftest.py  test_example.py
