[tool.poetry]
name = "fastapi-etag"
version = "0.2.0"
description = ""
authors = ["Steinthor Palsson <steini90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
mypy = "^0.761.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
