[tool.poetry]
name = "fastapi-etag"
version = "0.4.0"
description = "Convenience library for working with etags in fastapi"
authors = ["Steinthor Palsson <steini90@gmail.com>"]
license = "MIT"
repository = "https://github.com/steinitzu/fastapi-etag.git"
homepage = "https://github.com/steinitzu/fastapi-etag"
readme = "README.md"
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Environment :: Web Environment",
]

[tool.poetry.urls]
"Issue tracker" = "https://github.com/steinitzu/fastapi-etag/issues"
"Code" = "https://github.com/steinitzu/fastapi-etag"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
flake8 = "^3.7"
mypy = "^0.761.0"
pytest = "^5.3.5"
requests = "^2.22.0"
pytest-cov = "^2.8.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
